--- a/Task 1,2,3/Source Code/app/src/main/res/values/strings.xml
+++ b/Task 1,2,3/Source Code/app/src/main/res/values/strings.xml
@@ -23,4 +23,14 @@
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="renew">Renew</string>
+    <string name="profile">Profile</string>
+    <string name="account_info">Account Info</string>
+    <string name="home">Home</string>
+    <string name="add_account">Add Account</string>
+    <string name="add">Add</string>
+    <string name="info">Info</string>
+
 </resources>
